mobile view just finished :p

--- a/index.css
+++ b/index.css
@@ -1,3 +1,115 @@
+:root {
+    --Very-Dark-Grayish-Blue: hsl(217, 19%, 35%);
+    --Desaturated-Dark-Blue: hsl(214, 17%, 51%);
+    --Grayish-Blue: hsl(212, 23%, 69%);
+    --Light-Grayish-Blue: hsl(210, 46%, 95%);
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: 'Manrope', sans-serif;
+    background-color: var(--Light-Grayish-Blue);
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.card {
+    max-width: 360px;
+    margin: 15px;
+    border-radius: 1rem;
+    background-color: white;
+    overflow: hidden;
+    box-shadow: 0 1px 10px 0 var(--Grayish-Blue);
+}
+/* 
+.img {
+    overflow: hidden;
+} */
+
+.img img {
+    width: 100%;
+}
+
+.content , .author{
+    padding: 0 2.2rem;
+}
+
+.content h3 {
+    margin: 2rem 0 1rem 0;
+    color: var(--Very-Dark-Grayish-Blue);
+    line-height: 1.8rem;
+}
+
+.content p {
+    color: var(--Desaturated-Dark-Blue);
+    line-height: 1.5rem;
+    margin-bottom: 1rem;
+}
+
+.author {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.info , .share-options{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    padding: 1.4rem 0;
+    box-sizing: border-box
+}
+
+.info img {
+    border-radius: 50%;
+    width: 45px;
+}
+
+.info span {
+    display: block;
+}
+
+.name {
+    color: var(--Very-Dark-Grayish-Blue);
+}
+
+.date {
+    color: var(--Grayish-Blue);
+}
+
+
+.share-btn {
+    background-color: var(--Light-Grayish-Blue);
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.share-options span {
+    color: var(--Grayish-Blue);
+    text-transform: uppercase;
+    letter-spacing: 5px;
+}
+
+.share-options {
+    padding: 1.8rem 0;
+}
+
+.hidden {
+    display: none;
+}
+
 .attribution { 
     font-size: 11px;
     text-align: center; 
